# c_cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeListsDoc.txt  LICENSE  array_out_bound.c  binary_tree_no_recursion_free.c  byteorder.c  c_struct_padding.c  c_struct_padding_pack_layout.c  cast_pointer_2_uint32_nowarning.c  clock-tick.c  clock-tick.h  commacros.h  common.h  cpp_overloadfunction_derived.cpp  cpp_same_name_virtual_function.cc  cpp_sqrt.c  cpp_sqrt.cpp  cxx11_thread_mutex.cpp  delay.h  detectmemleak.h  file_iterator_usn.cpp  file_iterator_usn.h  file_operation.cpp  file_operation.h  fileenumex.h  fileenummd.h  flexible_array.c  hex_strs.cpp  hex_strs.h  howto_typedef_array_1_error.cpp  howto_typedef_array_2_right.cpp  is_there_a_loop_by_stackoverflow.cpp  kmp.cpp  kmp_prefix_array.cpp  lexer_parser.cpp  line_reader.h  linux_get_app_fullpath.cpp  (+47 more)
coredump/: CMakeLists.txt  core.md  coredump.c  coredump.h
coredump/0c_core/: CMakeLists.txt  coredump.c  test_getenv.py
coredump/cores/: 1.py  core_test  cores.sh  crash.c  out.py  restore_core.sh  run_docker_with_core.sh  set_core.sh  take_core.py  test_task_core.sh  view_core.sh
coredump/cores/official_test/: core.info  core_pattern_pipe_test  crash  make_crash.c  test.sh
coredump/official_test/: core_pattern_pipe_test_raw.c  run_docker_with_core.sh  test.sh
coredump/pycore/: cores.sh  run_docker_with_core.sh  take_core.py  test_task_core.sh
dpdk/: CMakeLists.txt  header.h  master.c  readme.md  ring_from_malloc.c  slave.c
dpdk/rte_generic/: rte_atomic.h  rte_pause.h  rte_pre_header.h  rte_rwlock.h
dpdk/rte_ring/: rte_ring.c  rte_ring.h
lib/: CMakeLists.txt  README.md  asprintf.c  asprintf.h  asprintf_test.c  atomic.h  crt_dbg_leak.c  crt_dbg_leak.cpp  crt_dbg_leak.h  cstring.c  cstring.h  cstring_test.c  datetime.c  datetime.cpp  datetime.h  delay.h  endpoint.c  endpoint.h  endpoint_test.c  file_operation.h  fileenummd.h  fio.c  fio.h  fio_simple.c  fmem.c  fmem.cpp  fmem.h  fmem_tests.c  nmutex.c  nmutex.h  nmutex_test.c  packet-tick.c  packet-tick.h  propvariant_bytes.c  propvariant_bytes.h  search.c  search.h  search_test.c  singleton.h  sort.c  (+3 more)
lib/cpp/: CMakeLists.txt  autoptr.h  cmdline.h  ensurecleanup.h  file_iterator.cpp  file_iterator.h  file_iterator_usn.cpp  file_iterator_usn.h  file_operation.cpp  hex_strs.cpp  hex_strs.h  line_reader.h  process.cpp  process.h  process_monitor.h  sigquit.cpp  sigquit.h  strings_algorithm.h  ttycolor.cpp  ttycolor.h  vpath.cpp  vpath.h
lib/curl_async/: curl_async.c  curl_async.h
lib/curl_async/tests/: CMakeLists.dynamic.txt  CMakeLists.txt  async_curl.c  client_in_python.py  curl_common.c  curl_common.h  libcurl.md  libcurl_static.cmake  noblock_curl.c  server.py  simple_curl.c
lib/hash/md5/: md5.c  md5.h
lib/hash/md5/tests/: CMakeLists.txt  main.c
lib/hash/sha1/: sha1.c  sha1.h
lib/hash/sha1/tests/: CMakeLists.txt  main.c
lib/library_loader/: CMakeLists.txt  library_loader.c  library_loader.h
lib/library_loader/tests/: CMakeLists.txt  api.h  loader.c
lib/library_loader/tests/plugin1/: CMakeLists.txt  plugin1.c
lib/whereami/: README.md
lib/whereami/tests/: run.bat  run.sh
lib/whereami/tests/executable/: CMakeLists.txt  executable.cpp
lib/whereami/tests/print_chs/: CMakeLists.txt
lib/whereami/tests/print_chs/include/print_chs/: print_chs.h
lib/whereami/tests/print_chs/src/: print_chs.cpp
lib/whereami/whereami/: CMakeLists.txt
lib/whereami/whereami/include/whereami/: whereami.h
lib/whereami/whereami/src/: whereami.c
